tests/rgs/syntax_errors/action_missing_name.rgs
STORY DEFAULT.
    AGENT Guard:
        ACTION.
        EVENT idle MYSELF.
        DURING ALWAYS:
            WHEN idle MYSELF:
                DO patrol.
